[package]
name = "hellebore_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.2"

[features]
default = ["default_print"]
default_print = ["print_sum_forces", "print_run_deltas", "print_rotate_by", "print_set_F_thrust"]
print_all = ["default_print", "print_new_angular_acceleration"]

#default prints
print_sum_forces = []
print_run_deltas = []
print_rotate_by = []
print_set_F_thrust = []

#expanded prints
print_new_angular_acceleration = []

#special
print_flag_print = []
