[package]
name = "hellebore_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.2"
num = "0.4"

[features]
default = ["default_print"]
default_print = ["print_sum_forces", "print_run_deltas_all", "print_rotate_by", "print_set_F_thrust", "print_handle_collisions", "print_SimpleMissileActor",
    "print_ThrustAction_perform_on", "print_on_death", "print_decide_movement_dt"]
print_all = ["default_print", "print_new_angular_acceleration"]

#default prints
print_sum_forces = []
print_run_deltas_all = ["print_run_deltas_linear", "print_run_deltas_angular", "print_run_deltas_thrust_vectors"]
print_run_deltas_linear = ["print_run_deltas_any"]
print_run_deltas_angular = ["print_run_deltas_any"]
print_run_deltas_thrust_vectors = ["print_run_deltas_any"]
print_run_deltas_any = []
print_rotate_by = []
print_set_F_thrust = []
print_handle_collisions = []
print_SimpleMissileActor = []
print_ThrustAction_perform_on = []
print_on_death = []
print_decide_movement_dt = []

#expanded prints
print_new_angular_acceleration = []

#special
print_flag_print = []
